--- a/package.json
+++ b/package.json
@@ -12,24 +12,29 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.4",
     "@mui/x-data-grid": "^6.6.0",
     "@mui/x-date-pickers": "^6.6.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "chart.js": "^4.3.0",
     "dayjs": "^1.11.8",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "faker": "^6.6.6",
     "fullcalendar": "^6.1.8",
     "json-server": "^0.17.3",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
