--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
     image: mysql:8.0
     platform: linux/x86_64 # M1 Macの場合必要
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes" # rootアカウントをパスワードなしで作成
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       MYSQL_DATABASE: "polor"
-      TZ: "Asia/Tokyo" # タイムゾーンを日本時間に設定
+      TZ: "Asia/Tokyo"
     volumes:
       - mysql_data:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password # MySQL8.0ではデフォルトが"caching_sha2_password"で、ドライバが非対応のため変更
