--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.17.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
@@ -21,6 +22,7 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
@@ -31,7 +33,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.11.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
