--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.103.1"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
 sqlalchemy = "^2.0.20"
 aiomysql = "^0.2.0"
+python-multipart = "^0.0.6"
 
 
 [build-system]
