--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,21 +1,28 @@
 server {
     listen 80;
     server_name localhost;
-    
-    proxy_set_header    Host    $host;
-    proxy_set_header    X-Real-IP    $remote_addr;
-    proxy_set_header    X-Forwarded-Host       $host;
-    proxy_set_header    X-Forwarded-Server    $host;
-    proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
- 
+
+    proxy_set_header    Host                $host;
+    proxy_set_header    X-Real-IP           $remote_addr;
+    proxy_set_header    X-Forwarded-Host    $host;
+    proxy_set_header    X-Forwarded-Server  $host;
+    proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+
     # reactのアクセスはnodejsコンテナに流す
     location / {
         proxy_pass http://frontend:3000;
     }
- 
+
     # /apiはバックエンドのpythonのコンテナに流す
     #リバースプロキシにheaderを付与する
     location /api {
         proxy_pass http://backend:8000;
+    }
+
+    location /_next/webpack-hmr {
+        proxy_pass http://frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
