--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = {extras = ["standard"], version = "^0.23.2"}
 sqlalchemy = "^2.0.20"
 aiomysql = "^0.2.0"
 python-multipart = "^0.0.6"
+ultralytics = "^8.0.227"
 
 
 [build-system]
