Update backend and frontend code

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,9 @@
 FROM python:3.9-buster
 ENV PYTHONUNBUFFERED=1
 
+ENV POETRY_HOME="/opt/poetry"
+ENV PATH="$PATH:$POETRY_HOME/bin"
+
 RUN apt-get clean && \
     apt-get -y update && \
     apt-get install -y wget build-essential libgl1-mesa-dev
@@ -16,9 +19,10 @@ RUN pip install poetry
 COPY ["./backend/pyproject.toml", "./backend/poetry.lock", "/src/"]
 
 # poetryでライブラリをインストール (pyproject.tomlが既にある場合)
-RUN poetry config virtualenvs.in-project false
+RUN poetry config virtualenvs.in-project true
 RUN poetry install --no-root
 
+ENV PYTHONPATH="/src/.venv/lib/python3.9/site-packages:$PYTHONPATH"
 
 # uvicornのサーバーを立ち上げる
 ENTRYPOINT ["poetry", "run", "uvicorn", "api.main:app", "--host", "0.0.0.0", "--reload"]
