--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.0"
 
 services:
   backend:
+    environment:
+      TZ: "Asia/Tokyo"
     volumes:
       - ./backend/.dockervenv:/src/.venv
       - ./backend:/src
@@ -25,6 +27,8 @@ services:
     ports:
       - 33306:3306 # ホストマシンのポート33306を、docker内のポート3306に接続する
   frontend:
+    environment:
+      TZ: "Asia/Tokyo"
     build:
       context: .
       dockerfile: frontend/Dockerfile
@@ -44,4 +48,3 @@ services:
 volumes:
   mysql_data:
   # media:
-  
