--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,8 @@ opencv-python = "^4.9.0.80"
 pillow = "^10.2.0"
 psutil = "^5.9.7"
 watchdog = "^4.0.1"
+databases = "^0.9.0"
+httpx = "^0.27.0"
 
 
 [build-system]
